i2c-tools CHANGES
-----------------

3.0.0 (2007-10-14)
  Initial release